<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/codact"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:text="@string/qrtext"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/imgText"
            android:textStyle="bold"/>
        <ImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:id="@+id/imgview"/>
    </FrameLayout>
    <EditText
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:textSize="14dp"
        android:id="@+id/edittxt"
        android:hint="@string/hint"/>
    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:backgroundTint="@color/butback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/generate"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/send_via"
        android:backgroundTint="@color/butback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/sharedBut"/>
</LinearLayout>