<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/qrmain"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/mainpage"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/mainText"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/scanner"
        android:backgroundTint="@color/butback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/scan"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/create"
        android:backgroundTint="@color/butback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/generate"/>

</LinearLayout>